2005-03-25  Sven Panne  <sven.panne@aedion.de>

	* linux/src/configure.ac: <alsa/asoundlib.h> needs <time.h> when
	ISO C99 is enabled.

	* linux/src/al_config.c: As mentioned in the docs, try system wide
	config file in /etc if no user-specific one is found.

2005-03-23  Sven Panne  <sven.panne@aedion.de>

	* Makefile.in, config-osx.h, configure.ac, openal-config.in,
	openal.pc.in, audioconvert/Makefile.in, src/Makefile.in,
	src/al_state.c: Centralize and simplify versionitis; everything is
	derived from the PACKAGE_VERSION defined via AC_INIT now.

	* linux/src/Makefile.in: Avoid useless relinking.

	* linux/audioconvert/Makefile.in: The test audioconvert test
	program is now called "test_ac". Using plain "test" could have
	been very surprising depending on your shell/PATH/..., because it
	is a very common shell builtin.

	* linux/audioconvert/test.c: Removed.

	* linux/audioconvert/test_ac.c: Added.

	* linux/Makefile.in, linux/audioconvert/Makefile.in,
	linux/doc/Makefile.in, linux/jlib/Makefile.in
	linux/src/Makefile.in, linux/test/Makefile.in: Unified *clean
	targets a bit and added a new target "repo-clean" which brings
	back everything to the "fresh from repository" state. Alas, there
	is no standard GNU target for this.

	Note that there is still a lot of cut-n-paste going on here, but
	this will improve when we switch to automake/libtool (which I
	intend to do).

2005-03-20  Sven Panne  <sven.panne@aedion.de>

	* linux/Makefile.in, linux/audioconvert/Makefile.in,
	linux/configure.ac, linux/jlib/Makefile.in, linux/src/Makefile.in,
	linux/test/Makefile.in: Explicitly handling MAKE is evil because
	it prevents the correct passing of commandline arguments to
	sub-makes. Small cleanup.

	* linux/configure.ac: Modernized a bit, requiring autoconf 2.58
	now. Fixed alsa-dlopen, arts-dlopen and esd-dlopen flags. Removed
	random "spell checking" of arguments. Removed --with-gcc flag,
	setting CC is the "autoconf way" of doing that.
