@@ -53,7 +53,7 @@ typedef struct {
 static const char *implement_me(const char *fn) {
 	static char retval[2048];
 
-	sprintf(retval,
+	snprintf(retval, sizeof(retval),
 	"%s is not implemented under Solaris.  Please contact %s for\n"
 	"information on how you can help get %s implemented on Solaris.\n",
 	fn, EMAIL_ADDRESS, fn);
